--- a/src/main/resources/view/userProfile.fxml
+++ b/src/main/resources/view/userProfile.fxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -11,39 +10,30 @@
 
 <AnchorPane fx:id="root" prefHeight="1124.0" prefWidth="1970.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.teaFactory.controller.UserProfileController">
    <children>
-      <ImageView fitHeight="996.0" fitWidth="1808.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="1008.0" fitWidth="1793.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../img/Frame%2041.png" />
          </image>
       </ImageView>
-      <TextField fx:id="idTxt" layoutX="82.0" layoutY="386.0" prefHeight="53.0" prefWidth="510.0" promptText="User ID" style="-fx-background-color: tra;">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="uNameTxt" layoutX="91.0" layoutY="492.0" prefHeight="53.0" prefWidth="494.0" promptText="User Name" style="-fx-background-color: tra;">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="cantcTxt" layoutX="91.0" layoutY="604.0" prefHeight="53.0" prefWidth="494.0" promptText="Cantac" style="-fx-background-color: tra;">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </TextField>
-      <TableView fx:id="tbl" layoutX="719.0" layoutY="55.0" prefHeight="865.0" prefWidth="744.0" stylesheets="@../style/tableCss.css">
-        <columns>
-          <TableColumn fx:id="colId" prefWidth="138.0" text="User ID" />
-          <TableColumn fx:id="colIntime" prefWidth="231.0" text="InTime" />
-            <TableColumn fx:id="colOutTime" prefWidth="198.3333740234375" text="Out Time" />
-            <TableColumn fx:id="colDate" prefWidth="177.0" text="Date" />
-        </columns>
-      </TableView>
-      <JFXButton layoutX="81.0" layoutY="840.0" onAction="#UpdateOnAction" prefHeight="73.0" prefWidth="504.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" text="Update Detailse">
+      <JFXButton layoutX="82.0" layoutY="813.0" onAction="#deleteaccOnAction" prefHeight="73.0" prefWidth="504.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" text="Delete Account">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </JFXButton>
-      <TextField fx:id="pwTxt" layoutX="88.0" layoutY="708.0" prefHeight="63.0" prefWidth="495.0" style="-fx-background-color: tra;" />
+      <TextField fx:id="usernameTxt" layoutX="847.0" layoutY="337.0" prefHeight="47.0" prefWidth="439.0" style="-fx-background-color: tra;" />
+      <TextField fx:id="idTxt" layoutX="847.0" layoutY="431.0" prefHeight="46.0" prefWidth="439.0" style="-fx-background-color: tra;" />
+      <TextField fx:id="contacTxt" layoutX="847.0" layoutY="523.0" prefHeight="48.0" prefWidth="439.0" style="-fx-background-color: tra;" />
+      <PasswordField fx:id="pwTxt" layoutX="846.0" layoutY="621.0" prefHeight="48.0" prefWidth="440.0" style="-fx-background-color: tra;" />
+      <PasswordField fx:id="cpwTxt" layoutX="847.0" layoutY="724.0" prefHeight="45.0" prefWidth="439.0" style="-fx-background-color: tra;" />
+      <JFXButton layoutX="844.0" layoutY="819.0" onAction="#updateOnAction" prefHeight="75.0" prefWidth="447.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" text="Update user Info">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </JFXButton>
+      <JFXButton layoutX="80.0" layoutY="679.0" onAction="#addnewaccOnAction" prefHeight="76.0" prefWidth="502.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" text="Add New Account">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </JFXButton>
    </children>
 </AnchorPane>
