--- a/src/main/resources/view/otpPage.fxml
+++ b/src/main/resources/view/otpPage.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="root" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.teaFactory.controller.OtpPageController">
    <children>
@@ -13,8 +14,24 @@
             <Image url="@../img/otpPage.png" />
          </image>
       </ImageView>
-      <TextField fx:id="otpTxt" layoutX="769.0" layoutY="544.0" prefHeight="63.0" prefWidth="417.0" style="-fx-background-color: tra;" />
+      <TextField fx:id="otpTxt" layoutX="295.0" layoutY="201.0" prefHeight="63.0" prefWidth="417.0" promptText="otp" style="-fx-background-color: tra;" />
       <JFXButton layoutX="1246.0" layoutY="546.0" onAction="#okOnAction" prefHeight="74.0" prefWidth="142.0" text="sent" />
       <JFXButton layoutX="1520.0" layoutY="231.0" onAction="#tOnAction" prefHeight="25.0" prefWidth="102.0" text="tempary" />
+      <TextField fx:id="otpField1Txt" layoutX="750.0" layoutY="532.0" prefHeight="73.0" prefWidth="97.0" style="-fx-background-color: tra;">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></TextField>
+      <TextField fx:id="otpField2Txt" layoutX="869.0" layoutY="534.0" prefHeight="70.0" prefWidth="100.0" style="-fx-background-color: tr;">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font></TextField>
+      <TextField fx:id="otpField3Txt" layoutX="985.0" layoutY="534.0" prefHeight="70.0" prefWidth="100.0" style="-fx-background-color: tra;">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font></TextField>
+      <TextField fx:id="otpField4Txt" layoutX="1110.0" layoutY="535.0" onAction="#textOnAction" prefHeight="68.0" prefWidth="93.0" style="-fx-background-color: tra;">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font></TextField>
    </children>
 </AnchorPane>
