--- a/src/main/resources/style/textfield.css
+++ b/src/main/resources/style/textfield.css
@@ -4,11 +4,11 @@
     /* Your custom styles go here */
     -fx-background-color: rgba(255, 0, 0, 0);
     -fx-text-fill: #3c3c69;
-    -fx-border-color: darkgray;
+    -fx-border-color: #090606;
     -fx-border-width: 1px;
     -fx-border-radius: 5px;
     -fx-padding: 5px;
-    -fx-font-size: 14px;
+    -fx-font-size: 24px;
     -fx-font-family: "Arial";
     -fx-prompt-text-fill: gray; /* Color of the prompt text */
     -fx-focus-color: dodgerblue; /* Color of the focus ring when the TextField is selected */
