--- a/src/main/resources/view/otpPage.fxml
+++ b/src/main/resources/view/otpPage.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -33,5 +34,9 @@
          <font>
             <Font name="System Bold" size="24.0" />
          </font></TextField>
+      <Button layoutX="1004.0" layoutY="648.0" mnemonicParsing="false" onAction="#resentOtpOnAction" prefHeight="40.0" prefWidth="118.0" style="-fx-background-color: tr;" text="Resent otp" textFill="#1500ff">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Button>
    </children>
 </AnchorPane>
