--- a/src/main/resources/view/dashboard1.fxml
+++ b/src/main/resources/view/dashboard1.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -68,7 +69,7 @@
             <Font name="System Bold" size="72.0" />
          </font>
       </Label>
-      <ImageView fitHeight="194.0" fitWidth="727.0" layoutX="833.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="194.0" fitWidth="727.0" layoutX="828.0" layoutY="88.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../img/Frame%2039.png" />
          </image>
@@ -78,6 +79,7 @@
             <Font name="System Bold" size="72.0" />
          </font>
       </Label>
-      <Button layoutX="890.0" layoutY="366.0" mnemonicParsing="false" prefHeight="581.0" prefWidth="270.0" styleClass="button-with-style" stylesheets="@../style/clearbtn.css" text="Button" />
+      <Button layoutX="890.0" layoutY="366.0" mnemonicParsing="false" prefHeight="178.0" prefWidth="270.0" styleClass="button-with-style" stylesheets="@../style/clearbtn.css" text="Button" />
+      <JFXButton layoutX="1194.0" layoutY="371.0" prefHeight="175.0" prefWidth="286.0" styleClass="button-with-style" stylesheets="@../style/loginbutton.css" />
    </children>
 </AnchorPane>
