--- a/src/main/resources/view/supplier_page.fxml
+++ b/src/main/resources/view/supplier_page.fxml
@@ -38,17 +38,17 @@
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="nameTxt" layoutX="1043.0" layoutY="339.0" prefHeight="54.0" prefWidth="426.0" promptText="name" style="-fx-background-color: tra;">
+      <TextField fx:id="nameTxt" layoutX="1043.0" layoutY="339.0" prefHeight="54.0" prefWidth="426.0" promptText="name" stylesheets="@../style/textfield.css">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="Contac" layoutX="1044.0" layoutY="462.0" prefHeight="54.0" prefWidth="426.0" promptText="no" style="-fx-background-color: tra;">
+      <TextField fx:id="Contac" layoutX="1044.0" layoutY="462.0" prefHeight="54.0" prefWidth="426.0" promptText="no" stylesheets="@../style/textfield.css">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="Address" layoutX="1044.0" layoutY="586.0" prefHeight="54.0" prefWidth="426.0" promptText="addres" style="-fx-background-color: tra;">
+      <TextField fx:id="Address" layoutX="1044.0" layoutY="586.0" prefHeight="54.0" prefWidth="426.0" promptText="addres" stylesheets="@../style/textfield.css">
          <font>
             <Font size="18.0" />
          </font>
